# agora

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Dockerfile  README.md  agora_example_picture.png~  docker-compose.single.yml  docker-compose.yml  docker-entrypoint.sh
daemon/: Cargo.toml
daemon/src/: dht.rs  discovery.rs  identity.rs  ipc.rs  main.rs  messaging.rs  network.rs  posts.rs  types.rs
electron/: agora-shim.js  index.html  main.js  package-lock.json  package.json  preload.js  style.css
electron/js/: actions.js  blocklist.js  channels.js  comments.js  events.js  follow.js  groups.js  helpers.js  i18n.js  lists.js  onboarding.js  profile.js  render.js  score.js  state.js  ui.js
web/: web-server.js
