[package]
name = "agora"
version = "0.2.0"
edition = "2021"
description = "Peer-to-peer identity and messaging — with username support and Electron IPC"

[[bin]]
name = "agora"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
ed25519-dalek = { version = "2", features = ["rand_core", "serde"] }
x25519-dalek  = { version = "2", features = ["static_secrets", "serde"] }
aes-gcm       = "0.10"
rand          = "0.8"
sha2          = "0.10"
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
base64        = "0.22"
mdns-sd       = "0.10"
clap          = { version = "4", features = ["derive"] }
thiserror     = "1"
anyhow        = "1"
chrono        = { version = "0.4", features = ["serde"] }
tracing       = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid          = { version = "1", features = ["v4"] }
tempfile      = "3"

[profile.release]
opt-level = 3
lto = true
